Fix attacks spacing #124

--- a/ionic2/app/pages/poke-detail/poke-detail.page.scss
+++ b/ionic2/app/pages/poke-detail/poke-detail.page.scss
@@ -96,7 +96,7 @@ ion-content {
 
   #attacks {
     margin: 0 auto 20px;
-    max-width: 700px;
+    max-width: 720px; /* 2 * 10px to compenstate for space to the sides */
     padding: 0 5px;
 
     display: flex;
